test/should-fail/vsgc3273.f3
/**
 * Regress test for VSGC-3273: Internal compiler error when finding a mixin abstract function error
 *
 * @test/compile-error
 */

mixin class A {
	abstract function m();
}

mixin class B {}

class C extends A, B { }
